--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation libs.guava
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.6'
     implementation 'org.mindrot:jbcrypt:0.4'
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
